Fix textarea width on mobile (#189)
* Use 100% width for textarea when falling back on mobile

* Fix 'focus' error on mobile when switching to context

--- a/frontend/src/components/Editor/Editor.module.scss
+++ b/frontend/src/components/Editor/Editor.module.scss
@@ -10,6 +10,8 @@
     line-height: 1.5;
 
     user-select: initial;
+
+    width: 100%;
 }
 
 .loadingContainer {
